--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,4 +1,4 @@
-<div class="display-4">Welcome to ArticleBase</div>
+<div class="display-4">Welcome to Jerry ArticleBase</div>
 <p class="mb-4">This is a Sails.js app for managing articles</p>
 <a href="/articles/list" class="btn btn-light">View articles</a>
 <a href="/articles/Add" class="btn btn-light">Add articles</a>
