--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,7 +14,7 @@
 
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-4">
-      <a class="navbar-brand" href="/">AriticleBase</a>
+      <a class="navbar-brand" href="/" c>AriticleBase</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
